# simple-chatbot

./: .env.example  .gitignore  README.md  TODO.md  evaluation_context.ipynb  generate_eval_data.py  main.py  my_eval.json  parking_system.db  pyproject.toml
datasets/: dummy.json
documents/: booking_process.txt  general_information.md  location.txt  parking_details.txt
scripts/: create_parking_db.py  create_vector_db.py
